--- a/style.css
+++ b/style.css
@@ -17,7 +17,26 @@ body {
     color: green;
     font-size: 10px;
 }
-/*---navbar---*/
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+li {
+    color: #fff;
+    padding: 5 15 0 15;
+}
+#left-navbar-flexbox {
+    height: 0px;
+    display: flex;
+    justify-content: flex-start;
+}
+#right-navbar-flexbox {
+    height: 0px;
+    display: flex;
+    justify-content: flex-end;
+    align-content: flex-end;
+}
 h1 {
     font-size: 100px;
 }
@@ -28,6 +47,7 @@ h1 {
 .google-container {
     display: grid;
     margin: -123 670 0 0;
+    position: relative;
 }
 .google-background {
     height: 235px;
@@ -162,13 +182,24 @@ h1 {
     flex-direction: column;
     align-items: center;
 }
+#santa-grid {
+    display: grid;
+}
+.position-santa {
+    margin: -89 0 0 -30;
+}
+.position-snow {
+    padding: 75 0 0 95;
+    width: 21vw;
+    height: 572px;
+    position: absolute;
+}
 .footer {
   position: fixed;
-  top: 890;
+  height: 40px;
   left: 0;
   bottom: 0;
   width: 100%;
   background-color: #76B7E1;
-  color: white;
   text-align: center;
 }
